tests/ui/traits/vtable-res-trait-param.stderr
error[E0277]: the trait bound `{integer}: TraitA` is not satisfied
  --> $DIR/vtable-res-trait-param.rs:17:18
   |
LL |     b.gimme_an_a(y)
   |       ---------- ^ the trait `TraitA` is not implemented for `{integer}`
   |       |
   |       required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/vtable-res-trait-param.rs:1:1
   |
LL | trait TraitA {
   | ^^^^^^^^^^^^
note: required by a bound in `TraitB::gimme_an_a`
  --> $DIR/vtable-res-trait-param.rs:6:21
   |
LL |     fn gimme_an_a<A:TraitA>(&self, a: A) -> isize;
   |                     ^^^^^^ required by this bound in `TraitB::gimme_an_a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
